objects/ChannelProgramMember.object
<CustomObject>
    <fields>
        <fullName>DV_PAA__Pending_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Level downgrade in pending</inlineHelpText>
        <label>Pending Level</label>
        <referenceTo>ChannelProgramLevel</referenceTo>
        <relationshipLabel>Member Accounts (Pending Level)</relationshipLabel>
        <relationshipName>Pending_Level_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Points_to_Next_Level__c</fullName>
        <formula>IF (Level.DV_PAA__Next_Level_Point_Requirement__c &lt; DV_PAA__Total_Partner_Points__c, 0, Level.DV_PAA__Next_Level_Point_Requirement__c - DV_PAA__Total_Partner_Points__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points to Next Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Total_Partner_Points__c</fullName>
        <inlineHelpText>Leave this empty when changing levels and it will automatically assign the minimum points requirement of that level</inlineHelpText>
        <label>Total Partner Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>